# WareBot

./: CMakeLists.txt  package.xml  setup.cfg  setup.py
srv/: TaskStatus.srv
warebot/: broadcaster.py  task.py  task_status_service.py  task_subscriber.py
